refac(middleware): auth jwt error validation request using auth
